[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/scripts/UI/vendor_weapon_button.gd" type="Script" id=1]
[ext_resource path="res://src/theme/zordoom_theme.tres" type="Theme" id=2]
[ext_resource path="res://resources/audio/ui/button_navigate.wav" type="AudioStream" id=3]
[ext_resource path="res://resources/audio/ui/button_click.wav" type="AudioStream" id=4]

[node name="VendorWeaponButton" type="Button"]
margin_right = 1280.0
margin_bottom = 120.0
theme = ExtResource( 2 )
text = "label"
script = ExtResource( 1 )

[node name="Audio" type="Node" parent="."]

[node name="Click" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 4 )

[node name="Move" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 3 )

[connection signal="focus_exited" from="." to="." method="_on_VendorWeaponButton_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_VendorWeaponButton_pressed"]
